# rust-vfs

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  wercker.yml
.githooks/: pre-commit
.github/workflows/: compile.yml
examples/: https_fs.rs  https_fs_server.rs
examples/cert/: README.md  cert.crt  create.sh  private-key.key
src/: altroot.rs  error.rs  filesystem.rs  lib.rs  memory.rs  operations.rs  path.rs  physical.rs  test_macros.rs  util.rs  vfs.rs
src/async_vfs/: error.rs  filesystem.rs  mod.rs  path.rs  test_macros.rs
src/async_vfs/impls/: altroot.rs  memory.rs  mod.rs  overlay.rs  physical.rs  s3.rs
src/impls/: altroot.rs  embedded.rs  https.rs  memory.rs  mod.rs  overlay.rs  physical.rs  zip.rs
src/impls/https/: httpsfserror.rs
