[package]
name = "vfs"
version = "0.11.0"
authors = ["Manuel Woelker <github@manuel.woelker.org>"]
description = "A virtual filesystem for Rust"
repository = "https://github.com/manuel-woelker/rust-vfs"
readme = "README.md"
keywords = ["vfs", "virtual", "filesystem", "async"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75"

[badges]
travis-ci = { repository = "manuel-woelker/rust-vfs", branch = "master" }

[dependencies]
rust-embed = { version = "8.0.*", optional = true }
async-std = { version = "1.12.0", optional = true }
async-trait = { version = "0.1.73", optional = true}
tokio = { version = "1.29.0", features = ["macros", "rt"], optional = true}
futures = {version = "0.3.28", optional = true}
async-recursion = {version = "1.0.5", optional = true}

[dev-dependencies]
uuid = { version = "=0.8.1", features = ["v4"] }
camino = "1.0.5"
anyhow = "1.0.58"
tokio-test = "0.4.3"

[features]
embedded-fs = ["rust-embed"]
async-vfs = ["tokio", "async-std", "async-trait", "futures", "async-recursion"]
export-test-macros = []

[package.metadata.docs.rs]
features = ["embedded-fs", "async-vfs"]
