[package]
name = "vfs"
version = "0.12.2"
authors = ["Manuel Woelker <github@manuel.woelker.org>"]
description = "A virtual filesystem for Rust"
repository = "https://github.com/manuel-woelker/rust-vfs"
readme = "README.md"
keywords = ["vfs", "virtual", "filesystem", "async"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.63.0"

[badges]
travis-ci = { repository = "manuel-woelker/rust-vfs", branch = "master" }

[dependencies]
rust-embed = { version = "8.0.0", optional = true }
async-trait = { version = "0.1.73", optional = true }
tokio = { version = "1.38", features = [
    "macros",
    "rt",
    "sync",
    "fs",
    "io-util",
], optional = true } # MSRV 1.65
tokio-stream = { version = "0.1.2", features = ["fs"], optional = true }

futures = { version = "0.3.28", optional = true }
async-recursion = { version = "1.1", optional = true }
filetime = "0.2.25"
camino = { version = "1.1.9", optional = true }

[dev-dependencies]
uuid = { version = "=0.8.1", features = ["v4"] }
camino = "1.0.5"
anyhow = "1.0"
tokio-test = "0.4"

[features]
default = []

embedded-fs = ["rust-embed"]
async-vfs = [
    "dep:tokio",
    "dep:tokio-stream",
    "dep:async-trait",
    "dep:futures",
    "dep:async-recursion",
]
export-test-macros = ["camino"]

[package.metadata.docs.rs]
features = ["embedded-fs", "async-vfs"]
