[package]
name = "vfs"
version = "0.12.2"
authors = ["Manuel Woelker <github@manuel.woelker.org>"]
description = "A virtual filesystem for Rust"
repository = "https://github.com/manuel-woelker/rust-vfs"
readme = "README.md"
keywords = ["vfs", "virtual", "filesystem", "async"]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.91.0"

[badges]
travis-ci = { repository = "manuel-woelker/rust-vfs", branch = "master" }

[dependencies]
rust-embed = { version = "8", optional = true }
async-std = { version = "1", optional = true }
async-trait = { version = "0", optional = true }
tokio = { version = "1", features = ["macros", "rt"], optional = true }
futures = { version = "0", optional = true }
async-recursion = { version = "1", optional = true }
filetime = "0"
camino = { version = "1", optional = true }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
camino = "1"
anyhow = "1"
tokio-test = "0"

[features]
embedded-fs = ["rust-embed"]
async-vfs = ["tokio", "async-std", "async-trait", "futures", "async-recursion"]
export-test-macros = ["camino"]

[package.metadata.docs.rs]
features = ["embedded-fs", "async-vfs"]
